(library
 (name tezos_context_recording)
 (public_name tezos-context.recording)
 (libraries tezos-base
            tezos-shell-services
            tezos-stdlib-unix
            tezos-context.encoding
            tezos-context.sigs
            tezos-context.memory
            repr
            irmin
            rusage bentov printbox printbox-text)
(preprocess
  (pps ppx_repr ppx_deriving.enum))
(modules
misc
raw_actions_trace_definition
raw_actions_trace_recorder
recorder
shim
stats_trace_definition
stats_trace_recorder
trace_common
trace_auto_file_format
trace_auto_file_format_intf
; trace_raw_actions_summary
;trace_stats_summary
; trace_stats_summary_cb
;trace_stats_summary_conf
;trace_stats_summary_pp
;trace_stats_summary_utils
)
(flags (:standard -open Tezos_shell_services
                   -open Tezos_base__TzPervasives
                   -open Tezos_stdlib_unix
                   -open Tezos_stdlib)))
